[tool.poetry]
name = "db-models"
version = "0.1.0"
description = ""
authors = ["XDeviation <191602098@qq.com>"]
readme = "README.md"
packages = [{include = "db_models"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.44"
logger = {path = "../logger/dist/logger-1.1.3-py3-none-any.whl"}
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
