[tool.poetry]
name = "bot-controller"
version = "0.1.0"
description = ""
authors = ["XDeviation <191602098@qq.com>"]
readme = "README.md"
packages = [{include = "bot_controller"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.42"
logger = {path = "../../../logger/dist/logger-1.0.0-py3-none-any.whl"}
qq-bot = {path = "../qq_bot/dist/qq_bot-0.1.0-py3-none-any.whl"}
wheel = "^0.37.1"
backports-zoneinfo = "0.2.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
