[tool.poetry]
name = "qq-bot"
version = "0.1.0"
description = ""
authors = ["XDeviation <191602098@qq.com>"]
readme = "README.md"
packages = [{include = "qq_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pyyaml = "^6.0"
logger = {path = "../../../logger/dist/logger-1.0.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
